FEX-77 Update Sector filter location, and last interaction date label

--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -175,7 +175,7 @@
                         <ul class="govuk-grid-column-one-half govuk-list">
                             {% if item.last_interaction_date %}
                                 <li>
-                                    <span class="app-metric-header govuk-!-display-inline">Last interaction date:</span>
+                                    <span class="app-metric-header govuk-!-display-inline">Last DIT interaction date:</span>
                                     <span class="app-metric-value govuk-!-display-inline">{{ item.last_interaction_date | formatDate }}</span>
                                 </li>
                             {% endif %}
