--- a/src/app/views/template.njk
+++ b/src/app/views/template.njk
@@ -1,5 +1,5 @@
 {% from "skip-link/macro.njk" import govukSkipLink -%}
-{% from "header/macro.njk" import govukHeader -%}
+{% from "datahub-header/component/header.njk" import datahubHeader -%}
 {% from "footer/macro.njk" import govukFooter -%}
 {% from "phase-banner/macro.njk" import govukPhaseBanner %}
 {# specify absolute url for the static assets folder e.g. http://wwww.domain.com/assets #}
@@ -38,53 +38,17 @@
 {% endblock %}
 
 {% block header %}
-    <div class="global-header">
-        <header class="govuk-header " role="banner" data-module="header">
-            <div class="govuk-header__container govuk-width-container">
-                <div class="govuk-header__logo">
-                    <a href="https://www.datahub.trade.gov.uk" class="govuk-header__link govuk-header__link--homepage">
-                        <span class="govuk-header__logotype">
-                          <span class="govuk-header__logotype-text">
-                            Data Hub
-                          </span>
-                        </span>
-                    </a>
-                    <span class="govuk-tag govuk-phase-banner__content__tag global-phase-tag">BETA</span>
-                </div>
-                <ul class="proposition-menu">
-                    <li class="proposition-menu__item">
-                        <a href="{{globalHeader.supportUrl}}" class="proposition-menu__link govuk-link">Support</a>
-                    </li>
-                    <li class="proposition-menu__item">
-                        <a href="{{globalHeader.profileUrl}}" class="proposition-menu__link govuk-link">
-                            {{globalHeader.name | title}}
-                        </a>
-                    </li>
-                    <li class="proposition-menu__item">
-                        <a href="/sign-out" class="proposition-menu__link govuk-link">Sign out</a>
-                    </li>
-                </ul>
-
-            </div>
-            <div class="global-nav-pane">
-                <nav class="global-nav govuk-clearfix">
-                    <div class="govuk-width-container">
-                        <ul class="global-nav-list">
-                            {% for item in globalHeader.permitted_applications %}
-                                <li class="global-nav-list-item">
-                                    <a href="{{ item.path }}"
-                                       class="global-nav-link govuk-link {{ 'active' if item.path == '/' }}">
-                                        {{ item.name }}
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </header>
-    </div>
-
+    {{ datahubHeader( globalHeader.permitted_applications, {
+        active: 'find-exporters',
+        fluid: false,
+        domains: {
+            findExporters: '/'
+        },
+        user: {
+            name: globalHeader.name | title
+        },
+        signout: '/sign-out'
+    } ) }}
 {% endblock %}
 
 {% block main %}
