FEX-80 Add the ability to filter by postcode on the frontend
* Front-end consists of a standard free text input
* Back-end splits the input text on commas, trims off whitespace, chucks
out empty strings
* This cleaned version of the query is used for the display of the
filter at the top of the list

--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -36,7 +36,7 @@
                                 {% endfor %}
                             </span>
                         </div>
-                    {% elseif key == 'companyName' or key == 'commodityCode' or key == 'sicCodes'%}
+                    {% elseif key == 'companyName' or key == 'commodityCode' or key == 'sicCodes' or key == 'postcode' %}
                         {% if value %}
                             <div class="app-filters-tags-title-value">
                                 <span class="app-filters-tags-title">{{ key | lowerCase | startCase }}:</span>
