FEX-80 Add hint to the postcode filter input

--- a/src/app/components/filter-postcode/template.njk
+++ b/src/app/components/filter-postcode/template.njk
@@ -6,6 +6,10 @@
             text: "Postcode",
             classes: "govuk-!-font-weight-bold app-filter-label"
         },
+        hint: {
+            text: "Search multiple postcodes separated by a comma",
+            classes: "app-filter-hint"
+        },
         id: "postcode",
         name: "postcode",
         value: params.postcode
