--- a/src/public/scss/utilities.scss
+++ b/src/public/scss/utilities.scss
@@ -10,6 +10,10 @@
   font-size: 16px;
 }
 
+.app-filter-hint {
+  font-size: 16px;
+}
+
 .app-filter-checkboxes-group label {
   font-size: 16px;
   padding-top: 11px;
