--- a/src/app/components/render-collection/styles.scss
+++ b/src/app/components/render-collection/styles.scss
@@ -158,5 +158,16 @@
   display: none;
 }
 
+.great-link-with-logo .great-logo {
+  height: 32px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.great-link-with-logo .great-link {
+  padding-bottom: 8px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
 
 
