--- a/src/app/views/company-activity-page.njk
+++ b/src/app/views/company-activity-page.njk
@@ -11,4 +11,13 @@
 
 {% block content %}
     {{ companyProfileBody(profile) }}
+
+    {% set params = params or {} %}
+
+    <div id="activity-feed-app" data-params="{{ params | dump }}">
+        <noscript>Please enable JavaScript in your browser to see the activity feed.</noscript>
+    </div>
+
+    <script src="js/activity-feed-app.js"></script>
+
 {% endblock %}
