FEX-118 Open GREAT link in new tab

--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -166,7 +166,7 @@
                                             <div class="govuk-!-display-block great-link-with-logo">
                                                 <img src="/public/img/great.svg" alt="GREAT" class="great-logo"/>
                                                 {% if item.find_a_supplier_url %}
-                                                    <a href="{{ item.find_a_supplier_url }}">
+                                                    <a href="{{ item.find_a_supplier_url }}" target="_blank">
                                                         GREAT Profile
                                                     </a>
                                                 {% endif %}
