FEX-169 solve styling issue on activity feed component

--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -6,3 +6,4 @@ $govuk-font-family: Arial, sans-serif;
 @import "utilities";
 @import "../../app/components/render-collection/styles";
 @import "../../app/components/company-profile-header/styles";
+@import "../../app/components/company-profile-body/styles";
