FEX-118 Add will-open-in-new-tab warning to GREAT profile link

--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -167,7 +167,7 @@
                                                 <img src="/public/img/great.svg" alt="GREAT" class="great-logo"/>
                                                 {% if item.find_a_supplier_url %}
                                                     <a href="{{ item.find_a_supplier_url }}" target="_blank">
-                                                        GREAT Profile
+                                                        GREAT Profile (will open in new tab)
                                                     </a>
                                                 {% endif %}
                                             </div>
