fixup! removed .bablerc and updated prod command

--- a/src/app/views/template.njk
+++ b/src/app/views/template.njk
@@ -47,7 +47,7 @@
         user: {
             name: globalHeader.name | title
         },
-        signout: '/sign-out'
+        signout: '/sign-out/'
     } ) }}
 {% endblock %}
 
