--- a/src/app/components/filter-commodity-code/template.njk
+++ b/src/app/components/filter-commodity-code/template.njk
@@ -5,7 +5,8 @@
 <div class="govuk-form-group app-filter-group-heading">
     {{ govukLabel({
             text: "Commodity code",
-            classes: "govuk-!-font-weight-bold app-filter-label"
+            classes: "govuk-!-font-weight-bold app-filter-label",
+            for: "commodity-code"
     }) }}
 
     <a href="https://www.trade-tariff.service.gov.uk/trade-tariff/sections?day=14&month=8&year=2018" target="_blank" class="govuk-link app-filter-external-link"> Do you know your commodity code?</a>
