--- a/src/app/components/filter-sic-codes/template.njk
+++ b/src/app/components/filter-sic-codes/template.njk
@@ -4,7 +4,8 @@
 <div class="govuk-form-group app-filter-group-heading">
     {{ govukLabel({
             text: "SIC codes",
-            classes: "govuk-!-font-weight-bold app-filter-label"
+            classes: "govuk-!-font-weight-bold app-filter-label",
+            for: "sic-codes"
     }) }}
 
     <a href="http://resources.companieshouse.gov.uk/sic/" target="_blank" class="govuk-link app-filter-external-link"> Do you know your SIC code?</a>
