--- a/src/app/components/local-phase-banner/template.njk
+++ b/src/app/components/local-phase-banner/template.njk
@@ -1,4 +1,4 @@
-<div class="govuk-phase-banner">
+<div class="govuk-phase-banner" role="region">
     <p class="govuk-phase-banner__content">
         <span class="govuk-phase-banner__text">
               Find exporters is a new service - your <a class="govuk-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSc-H72Kx9azBV4NvVTn-EmQ867gAZsVQ0UWEIpmD7Njcpm4BQ/viewform">feedback</a> will help us to improve it.
