--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -164,7 +164,7 @@
                                     <div class="govuk-!-display-block govuk-!-padding-top-1 govuk-!-padding-bottom-4">
                                         {% if item.is_joined_find_a_supplier %}
                                             <div class="govuk-!-display-block great-link-with-logo">
-                                                <img src="/public/img/great.svg" alt="GREAT" class="great-logo"/>
+                                                <img src="/public/img/great.svg" alt="GREAT logo" class="great-logo"/>
                                                 {% if item.find_a_supplier_url %}
                                                     <a href="{{ item.find_a_supplier_url }}" target="_blank">
                                                         GREAT Profile (will open in new tab)
