Update govuk-frontend package

--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -12,7 +12,9 @@
 {% from "filter-postcode/macro.njk" import filterPostcode %}
 {% from "render-collection/macro.njk" import renderCollection %}
 {% from "input/macro.njk" import govukInput %}
+{# {% from "notification-banner/macro.njk" import govukNotificationBanner %} #}
 {% from "local-phase-banner/macro.njk" import localPhaseBanner %}
+{# {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %} #}
 
 {% extends "_generic.njk" %}
 
