--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -1,6 +1,6 @@
 $govuk-font-family: Arial, sans-serif;
 
-@import "../../../node_modules/govuk-frontend/all";
+@import "../../../node_modules/govuk-frontend/govuk/all.scss";
 @import "../../../node_modules/@uktrade/datahub-header/component/header";
 
 @import "global-header";
