--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -11,8 +11,8 @@
 {% from "filter-sectors/macro.njk" import filterSectors %}
 {% from "filter-postcode/macro.njk" import filterPostcode %}
 {% from "render-collection/macro.njk" import renderCollection %}
+{% from "deprecation-notice/macro.njk" import deprecationNotice %}
 {% from "input/macro.njk" import govukInput %}
-{% from "notification-banner/macro.njk" import govukNotificationBanner %}
 {% from "local-phase-banner/macro.njk" import localPhaseBanner %}
 
 {% extends "_generic.njk" %}
@@ -23,21 +23,7 @@
 
 {% block content %}
     <h1 class="govuk-heading-l">Find Exporters</h1>
-    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
-        <div class="govuk-notification-banner__header">
-            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                Important
-            </h2>
-        </div>
-        <div class="govuk-notification-banner__content">
-            <p class="govuk-notification-banner__heading">
-                From 19/01/2022 this page will no longer be available. Use the <a class="govuk-notification-banner__link" href="https://data.trade.gov.uk/datasets/a70a3967-2352-4230-b556-61bf875dc28c">new version of Find Exporters</a>.
-            </p>
-            <p> 
-                Contact <a class="govuk-link" href="mailto:Nic.Winchester@trade.gov.uk">Nic.Winchester@trade.gov.uk</a> for support.
-            </p>
-        </div>
-    </div>
+    {{ deprecationNotice()}}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
             <form action="/" class="js-auto-submit app-form-filters">
