--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -11,17 +11,19 @@
 {% from "filter-sectors/macro.njk" import filterSectors %}
 {% from "filter-postcode/macro.njk" import filterPostcode %}
 {% from "render-collection/macro.njk" import renderCollection %}
+{% from "deprecation-notice/macro.njk" import deprecationNotice %}
 {% from "input/macro.njk" import govukInput %}
 {% from "local-phase-banner/macro.njk" import localPhaseBanner %}
 
 {% extends "_generic.njk" %}
 
-{%  block beforeWrapperContainer %}
+{% block beforeWrapperContainer %}
     {{ localPhaseBanner() }}
 {% endblock %}
 
 {% block content %}
     <h1 class="govuk-heading-l">Find Exporters</h1>
+    {{ deprecationNotice()}}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
             <form action="/" class="js-auto-submit app-form-filters">
